Fix background color and footer border or dark mode

--- a/src/styles/dark.scss
+++ b/src/styles/dark.scss
@@ -1,4 +1,6 @@
 .dark {
+  background-color: #202a37;
+
   --neutral: #cfcdcd;
   --color-1: #0f6ae1;
   --color-2: #e10f64;
